fix github link

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: mglambert
 description: mglambert blog
 google_verification: null
 linkedin : https://www.linkedin.com/in/mglambertv/
-linkedin : https://github.com/mglambert
+github : https://github.com/mglambert
 
 
 # File management
